--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@
     --darkslategray: #2f4f4f;
     --burger-mnu: #406774;
     --btn-CV: #3f3c3c;
+    --btn-border: #fec107;
 }
 
 /*--- All element selectors ----*/
@@ -30,7 +31,8 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    color: var(--text-colour);    
+    color: var(--text-colour);  
+    scroll-behavior: smooth;  
 }
 /* Body element Selector set to position Relative and overflow x is set to hidden */
 body{ 
@@ -127,7 +129,7 @@ nav li:last-child{
 
 /*---- main section ----*/
 main{
-    margin-top: 200px;
+    margin-top: 300px;
 }
 
 /* about me main section set to Flexbox */
@@ -342,6 +344,10 @@ figcaption {
 .user-input{
     margin-left: 5%;
      width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
 }
 
 /* form input */
@@ -349,26 +355,26 @@ figcaption {
     border: none;
     border-radius: 15px;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     padding: 8px 6px;
     outline: none;
 }
 
 /* set width on both input element selector */
-.user-input input[type=text], 
-.user-input input[type=submit] {
-    width: 100%;   
+.user-input input[type=text] {
+    width: 80%;   
 }
 
 /* submit button */
 .user-input input[type=submit] {
     background-color: var(--btn-CV);
-    color:#fff;
+    color: var(--links);
+    width: 60%;
 }
 
 /* set a border when input element is focused */
 .user-input input[type=text]:focus {
-    border: 1px solid #fec107;
+    border: 1px solid var(--btn-border);
 }
 
 /* Contact */
