--- a/assets/style.css
+++ b/assets/style.css
@@ -732,7 +732,7 @@ footer p {
     .lang-description {
         position:absolute;
         width: 100%;
-        top:70px;
+        top:30%;
         left: 1%;
     }
 
@@ -842,7 +842,7 @@ footer p {
 
     /* set position on class skill-title */
     .skill-title{
-        margin-top: -150px;
+        margin-top: -200px;
     }
 
     /* set position on class lang-description */
