--- a/assets/style.css
+++ b/assets/style.css
@@ -327,14 +327,6 @@ main{
     width: 100%;
 }
 
-/* portfolio */
-/* .portfolio {
-     border-radius: 20px;
-     margin:10% auto 2%;  
-     width: 300px;
-     height: 300px; 
-} */
-
 /* Project images */
 .proj {
     border-radius:20px;
@@ -368,10 +360,6 @@ figcaption {
     justify-content: flex-start;
 }
 
-/* contact h2 */
-/* #contact h2 {
-    margin-top: -25px;
-} */
 
 /* form */
 
@@ -447,42 +435,11 @@ figcaption {
 .icon-social {
     margin-right: 50px;
 }
-/* Contact */
-/* .contact-me {
-    margin: 20px 0 0 20px;
-}
 
-.tile-contact {
-    display:flex;
-    flex-direction:column;
-} 
-
-.contact-icon {
-    display:flex;
-    position:absolute;
-    top: 75%;
-    left: 18%;
-    list-style: none;
-}
-
-.social-icon {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    top: 75%;
-    left: 45%;
-    list-style: none;
-}
-*/
 
 .social-icon a i{
     color: var(--header-bg);
 }
-
-/* .tile-contact ul li{
-    padding: 20px;
-}  */
 
 
 /* Footer */
@@ -832,15 +789,32 @@ footer p {
 /* --- Media screen for screen less than 375px --- */
 
 @media screen and (max-width: 375px) { 
+    @media  screen and (max-height:812px) {
 
-    /* set overflow to hidden */
-    *{
-        overflow-x: hidden;
+        .proj {
+            width: 100%;
+        }
+
+        #contact {
+            height: inherit;
+        }
+
+        .contact-me {
+            margin-top: 2px;
+        }
+     .contact-info{
+         margin-top: 20px;
+     }
+
     }
+    /* set overflow to hidden */
+    /* *{
+        overflow-x: hidden;
+    } */
 
     /* set position on drop down navigation on burger menu */
 
-    .toggler:checked ~ nav ul{
+    /* .toggler:checked ~ nav ul{
         display: block;
         position:absolute;
         top:100px;
@@ -848,109 +822,109 @@ footer p {
         height: 200px;
         width: 50%;
 
-    }
+    } */
 
     /* set position on navigation */
 
-    nav ul li a {
+    /* nav ul li a {
         display: flex;
         align-items: center;
         justify-content: center;
-    }
+    } */
 
     /* set position on profile picture */
-    .profile-pic {
+    /* .profile-pic {
         left: 8%;
-    }
+    } */
 
     /* set position on ids */
-    #about, #myWork, #skills, #contact, #portfolio-container {
+    /* #about, #myWork, #skills, #contact, #portfolio-container {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
+    } */
 
     /* set position on class my-work */
-    .my-work{
+    /* .my-work{
        width: 100%;
        margin: 0 auto;
        justify-content: center;
-    }
+    } */
 
     /* set position on class box-container */
-    .box-container {
+    /* .box-container {
         flex-direction: column;
-        margin: 0px;
-    }
+        /* margin: 0px; */
+    } */
 
     /* set position and growth property on class box */
-    .box {
+    /* .box {
         flex-grow: 1;
         margin: 5px auto;
-    }
+    } */
 
     /* set position on class skill-title */
-    .skill-title{
+    /* .skill-title{
         margin-top: -200px;
-    }
+    } */
 
     /* set position on class lang-description */
-    .lang-description{
+    /* .lang-description{
         margin: 0 auto;
-    }
+    } */
 
     /* set over to hidden and height on contact */
-    #contact {
+    /* #contact {
         overflow: hidden;
         height: 40vh;
-    }
+    } */
 
     /* set width on form */
-   .user-input{
+   /* .user-input{
     width: 100%;
-    }
+    } */
 
     /* set position on class contact-me */
-    .contact-me {
+    /* .contact-me {
         margin-top: -70px;
-    }
+    } */
 
     /* set position on class social-icon and contact-icon*/
-    .social-icon {
+    /* .social-icon {
         top: 80%;
         left: 25%;
-    }
+    } */
 
-    .contact-icon {
+    /* .contact-icon {
         top: 55%;
         left: 20%;
-    }
+    } */
 
 
     /* set position on portfolio */
-    #portfolio-container {
+    /* #portfolio-container {
         justify-content: center;
         align-items: center;
-    }
+    } */
 
     /* set position on portfolio-container h2 */
-    #portfolio-container h2{
+    /* #portfolio-container h2{
         top: 15px;
         flex-direction: column;
         align-items: center;
-    }
+    } */
 
     /* set position on class portfolio */
-    .portfolio{
+    /* .portfolio{
         margin: 25px auto;
         width: 100%;
-    }
+    } */
 
     /* set width on project images */
-    .proj {
+    /* .proj {
         width: 100%;
     }
-}
+} */
 
 
    
