--- a/assets/style.css
+++ b/assets/style.css
@@ -344,10 +344,18 @@ main{
     width: 100%;
 }
 
+.portfolio {
+    display: flex;
+    flex-grow: 2;
+    width: 350px;
+    height: 350px;
+    margin: 0 5px 5px 5px;
+}
+
 /* Project images */
 .proj {
     border-radius:20px;
-    width: 350px;
+    width: 100%;
     height: 350px;
 }
 
